# prover

./: .gitignore  LICENSE  README.md  default.nix  prover.cabal  shell.fish  shell.nix
src/: .agda-roots  .roots  All.agda  Check.agda  Examples.agda  Main.agda  Main.hs
src/Prover/: Category.agda  Client.agda  Editor.agda  Function.agda  Prelude.agda
src/Prover/Category/: Base.agda  Chain.agda  Collection.agda  Dependent.agda  Dependent1.agda  Encoding.agda  Indexed.agda  Induced.agda  List.agda  Maybe.agda  Partial.agda  Product.agda  Setoid.agda  Sigma.agda  Simple.agda  Snoc.agda  Split.agda  Sum.agda  Unit.agda  Weak.agda
src/Prover/Category/Base/: Product.agda  Sigma.agda  Sum.agda
src/Prover/Category/Collection/: Unit.agda
src/Prover/Category/Dependent/: Bool.agda  Collection.agda  Decidable.agda  Encoding.agda  Function.agda  List.agda  Product.agda  Relation.agda  Simple.agda  Split.agda  Unit.agda
src/Prover/Category/Dependent/Collection/: Unit.agda
src/Prover/Category/Dependent/Decidable/: Unit.agda
src/Prover/Category/Dependent/Encoding/: List.agda  Product.agda  Unit.agda
src/Prover/Category/Dependent/List/: Unit.agda
src/Prover/Category/Dependent/Relation/: Unit.agda
src/Prover/Category/Dependent/Sigma/: Maybe.agda  Sum.agda
src/Prover/Category/Dependent/Simple/: Bool.agda  Collection.agda  Convert.agda  Decidable.agda  Encoding.agda  Function.agda  List.agda  Partial.agda  Product.agda  Relation.agda  Sigma.agda  Split.agda
src/Prover/Category/Dependent/Split/: Collection.agda  List.agda  Product.agda  Unit.agda
src/Prover/Category/Dependent1/: Maybe.agda  Partial.agda  Simple.agda  Split.agda  Unit.agda
src/Prover/Category/Dependent1/Split/: Maybe.agda
src/Prover/Category/Encoding/: List.agda  Product.agda  Sigma.agda  Sum.agda
src/Prover/Category/Encoding/Sigma/: Sum.agda
src/Prover/Category/Indexed/: Base.agda  List.agda  Product.agda  Simple.agda  Split.agda  Unit.agda
src/Prover/Category/Indexed/Base/: Product.agda  Sigma.agda
src/Prover/Category/Indexed/Partial/: Base.agda
src/Prover/Category/Indexed/Sigma/: Maybe.agda  Sum.agda
src/Prover/Category/Indexed/Simple/: Convert.agda  List.agda  (+2 more)
src/Prover/Category/List/: Unit.agda
src/Prover/Category/Partial/: Base.agda  Collection.agda  Induced.agda  List.agda  Maybe.agda  Product.agda  Setoid.agda  Sigma.agda  Simple.agda  Sum.agda  Unit.agda
src/Prover/Category/Setoid/: List.agda
src/Prover/Category/Sigma/: Maybe.agda  Sum.agda
src/Prover/Category/Simple/: Product.agda
src/Prover/Category/Split/: Base.agda  Collection.agda  Induced.agda  List.agda  Maybe.agda  Product.agda  Setoid.agda  Sigma.agda  Simple.agda  Sum.agda  Unit.agda
src/Prover/Client/: Aeson.agda  Brick.agda  Event.agda  Flat.agda  Flatten.agda  Run.agda
src/Prover/Data/: Any.agda  Associativity.agda  Bool.agda  Char.agda  CharWith.agda  Collection.agda  Direction.agda  Empty.agda  Equal.agda  Fin.agda  Formula.agda  Function.agda  IO.agda  Identifier.agda  If.agda  Inspect.agda  List.agda  Map.agda  Maybe.agda  Meta.agda  Metas.agda  Nat.agda  Precedence.agda  Proof.agda  Relation.agda  Rule.agda  Rules.agda  Sigma.agda  String.agda  Sum.agda  Symbol.agda  Symbols.agda  Text.agda  Theorem.agda  Token.agda  Unit.agda  Variable.agda  Variables.agda  Vec.agda
src/Prover/Data/Collection/: Named.agda
src/Prover/Data/Formula/: Construct.agda  Editor.agda  Insert.agda  State.agda
src/Prover/Data/Identifier/: Category.agda  Editor.agda
src/Prover/Data/Meta/: Editor.agda
src/Prover/Data/Number/: Editor.agda
src/Prover/Data/Proof/: Editor.agda
src/Prover/Data/Rule/: Category.agda
src/Prover/Data/Text/: Editor.agda
src/Prover/Data/Variables/: Category.agda
src/Prover/Draw/: Formula.agda  Meta.agda  Proof.agda  Tree.agda
src/Prover/Editor/: Base.agda  Child.agda  Collection.agda  Dependent.agda  Flat.agda  Flatten.agda  Indexed.agda  Lift.agda  List.agda  Map.agda  Parent.agda  Product.agda  Sigma.agda  Unit.agda
src/Prover/Editor/Collection/: Unit.agda
src/Prover/Editor/Dependent/: Collection.agda  List.agda  Map.agda  Product.agda  Sigma.agda  Unit.agda
src/Prover/Editor/Flat/: Command.agda
src/Prover/Editor/Indexed/: List.agda  Map.agda  Product.agda  Sigma.agda  Unit.agda
src/Prover/Editor/List/: Unit.agda
src/Prover/Editor/Map/: Event.agda  Pure.agda  State.agda  View.agda
src/Prover/Editor/Simple/: Formula.agda  Meta.agda  Proof.agda
src/Prover/Encoding/: Formula.agda  Proof.agda  Text.agda
src/Prover/Event/: Formula.agda  Proof.agda
src/Prover/Event/Proof/: Meta.agda
src/Prover/Function/: Bool.agda  Collection.agda  Compose.agda  Dependent.agda  Equal.agda  Identity.agda  Indexed.agda  List.agda  Partial.agda  Product.agda  Relation.agda  Sigma.agda  Split.agda  Sum.agda
src/Prover/Function/Bool/: List.agda  Product.agda
src/Prover/Function/Dependent/: Collection.agda  Decidable.agda  List.agda  Partial.agda  Product.agda  Relation.agda  Sigma.agda  Split.agda
src/Prover/Function/Indexed/: Bool.agda  List.agda  Partial.agda  Product.agda  Sigma.agda  Split.agda
src/Prover/Function/Partial/: Collection.agda  Compose.agda  List.agda  Product.agda  Sigma.agda  Sum.agda
src/Prover/Function/Split/: Compose.agda  List.agda  Product.agda  Sigma.agda  Sum.agda
src/Prover/Prelude/: Any.agda  Any1.agda  Bool.agda  Char.agda  CharWith.agda  Collection.agda  Decidable.agda  Digit.agda  Direction.agda  Empty.agda  Equal.agda  Equality.agda  Fin.agda  FinSet.agda  Function.agda  IO.agda  If.agda  Inspect.agda  Level.agda  List.agda  List1.agda  Map.agda  Maybe.agda  Nat.agda  Pair.agda  Relation.agda  Retraction.agda  Setoid.agda  Sigma.agda  String.agda  Sum.agda  Trichotomous.agda  Unit.agda  Vec.agda
src/Prover/Stack/: Formula.agda  Proof.agda  RichText.agda  Window.agda
src/Prover/Stack/Base/: RichText.agda
src/Prover/Stack/Flat/: Command.agda  Window.agda
src/Prover/Stack/Proof/: Meta.agda
src/Prover/View/: Command.agda  Formula.agda  Interface.agda  Line.agda  Proof.agda  RichText.agda  Style.agda  Text.agda  Tree.agda  Window.agda
(+102 files in other folders)
