cabal-version: 3.0

name:
  prover
version:
  0.1.0.0
build-type:
  Simple
license:
  MIT
license-file:
  LICENSE
maintainer:
  Matt Superdock <msuperdock@gmail.com>
synopsis:
  A simple interactive theorem prover.
description:
  An interactive theorem prover, with proofs represented using dependent types.
category:
  Mathematics

executable prover
  hs-source-dirs:
    src
  main-is:
    Main.hs
  other-modules:
    MAlonzo.Code.Agda.Builtin.Bool,
    MAlonzo.Code.Agda.Builtin.Char,
    MAlonzo.Code.Agda.Builtin.Equality,
    MAlonzo.Code.Agda.Builtin.IO,
    MAlonzo.Code.Agda.Builtin.List,
    MAlonzo.Code.Agda.Builtin.Nat,
    MAlonzo.Code.Agda.Builtin.Sigma,
    MAlonzo.Code.Agda.Builtin.String,
    MAlonzo.Code.Agda.Builtin.Unit,
    MAlonzo.Code.Agda.Primitive,
    MAlonzo.Code.Examples,
    MAlonzo.Code.Main,
    MAlonzo.Code.Prover.Category,
    -- MAlonzo.Code.Prover.Category.Chain,
    -- MAlonzo.Code.Prover.Category.Collection,
    -- MAlonzo.Code.Prover.Category.Indexed,
    -- MAlonzo.Code.Prover.Category.Indexed.List,
    -- MAlonzo.Code.Prover.Category.Indexed.Product,
    -- MAlonzo.Code.Prover.Category.Indexed.Sigma.Maybe,
    -- MAlonzo.Code.Prover.Category.Indexed.Sigma.Sum,
    -- MAlonzo.Code.Prover.Category.Indexed.Simple,
    -- MAlonzo.Code.Prover.Category.Indexed.Simple.Convert,
    -- MAlonzo.Code.Prover.Category.Indexed.Simple.List,
    -- MAlonzo.Code.Prover.Category.Indexed.Simple.Product,
    -- MAlonzo.Code.Prover.Category.Indexed.Simple.Sigma.Sum,
    -- MAlonzo.Code.Prover.Category.Indexed.Split,
    -- MAlonzo.Code.Prover.Category.Indexed.Split.List,
    -- MAlonzo.Code.Prover.Category.Indexed.Split.Product,
    -- MAlonzo.Code.Prover.Category.Indexed.Split.Sigma.Sum,
    -- MAlonzo.Code.Prover.Category.Indexed.Unit,
    -- MAlonzo.Code.Prover.Category.List,
    -- MAlonzo.Code.Prover.Category.Maybe,
    MAlonzo.Code.Prover.Category.Partial,
    -- MAlonzo.Code.Prover.Category.Partial.Collection,
    -- MAlonzo.Code.Prover.Category.Partial.Maybe,
    MAlonzo.Code.Prover.Category.Partial.Product,
    -- MAlonzo.Code.Prover.Category.Partial.Setoid,
    -- MAlonzo.Code.Prover.Category.Partial.Setoid.List,
    -- MAlonzo.Code.Prover.Category.Partial.Sigma,
    -- MAlonzo.Code.Prover.Category.Partial.Sum,
    MAlonzo.Code.Prover.Category.Partial.Unit,
    MAlonzo.Code.Prover.Category.Product,
    -- MAlonzo.Code.Prover.Category.Setoid,
    -- MAlonzo.Code.Prover.Category.Setoid.List,
    -- MAlonzo.Code.Prover.Category.Sigma,
    -- MAlonzo.Code.Prover.Category.Sigma.Maybe,
    -- MAlonzo.Code.Prover.Category.Sigma.Sum,
    MAlonzo.Code.Prover.Category.Simple,
    -- MAlonzo.Code.Prover.Category.Snoc,
    MAlonzo.Code.Prover.Category.Split,
    -- MAlonzo.Code.Prover.Category.Split.Collection,
    -- MAlonzo.Code.Prover.Category.Split.List,
    -- MAlonzo.Code.Prover.Category.Split.Maybe,
    MAlonzo.Code.Prover.Category.Split.Product,
    -- MAlonzo.Code.Prover.Category.Split.Setoid,
    -- MAlonzo.Code.Prover.Category.Split.Setoid.List,
    -- MAlonzo.Code.Prover.Category.Split.Sigma,
    -- MAlonzo.Code.Prover.Category.Split.Sigma.Maybe,
    -- MAlonzo.Code.Prover.Category.Split.Sigma.Sum,
    -- MAlonzo.Code.Prover.Category.Split.Sum,
    MAlonzo.Code.Prover.Category.Split.Unit,
    -- MAlonzo.Code.Prover.Category.Sum,
    MAlonzo.Code.Prover.Category.Unit,
    MAlonzo.Code.Prover.Category.Weak,
    -- MAlonzo.Code.Prover.Category.Weak.Sigma.Maybe,
    MAlonzo.Code.Prover.Client,
    MAlonzo.Code.Prover.Client.Aeson,
    MAlonzo.Code.Prover.Client.Brick,
    MAlonzo.Code.Prover.Client.Event,
    MAlonzo.Code.Prover.Client.Flat,
    MAlonzo.Code.Prover.Client.Flatten,
    MAlonzo.Code.Prover.Client.Run,
    MAlonzo.Code.Prover.Data.Associativity,
    MAlonzo.Code.Prover.Data.Formula,
    MAlonzo.Code.Prover.Data.Formula.Construct,
    MAlonzo.Code.Prover.Data.Formula.Editor,
    MAlonzo.Code.Prover.Data.Formula.Insert,
    MAlonzo.Code.Prover.Data.Formula.State,
    MAlonzo.Code.Prover.Data.Identifier,
    MAlonzo.Code.Prover.Data.Identifier.Editor,
    MAlonzo.Code.Prover.Data.Meta,
    MAlonzo.Code.Prover.Data.Meta.Editor,
    MAlonzo.Code.Prover.Data.Metas,
    MAlonzo.Code.Prover.Data.Number.Editor,
    MAlonzo.Code.Prover.Data.Precedence,
    MAlonzo.Code.Prover.Data.Proof,
    MAlonzo.Code.Prover.Data.Proof.Editor,
    MAlonzo.Code.Prover.Data.Proof.Editor.Meta,
    MAlonzo.Code.Prover.Data.Rule,
    MAlonzo.Code.Prover.Data.Rules,
    MAlonzo.Code.Prover.Data.Symbol,
    MAlonzo.Code.Prover.Data.Symbols,
    MAlonzo.Code.Prover.Data.Text,
    MAlonzo.Code.Prover.Data.Text.Editor,
    MAlonzo.Code.Prover.Data.Token,
    MAlonzo.Code.Prover.Data.Variable,
    MAlonzo.Code.Prover.Data.Variables,
    MAlonzo.Code.Prover.Editor,
    MAlonzo.Code.Prover.Editor.Base,
    MAlonzo.Code.Prover.Editor.Child,
    -- MAlonzo.Code.Prover.Editor.Collection,
    MAlonzo.Code.Prover.Editor.Flat,
    MAlonzo.Code.Prover.Editor.Flatten,
    -- MAlonzo.Code.Prover.Editor.Indexed,
    -- MAlonzo.Code.Prover.Editor.Indexed.List,
    -- MAlonzo.Code.Prover.Editor.Indexed.Map,
    -- MAlonzo.Code.Prover.Editor.Indexed.Product,
    -- MAlonzo.Code.Prover.Editor.Indexed.Sigma,
    -- MAlonzo.Code.Prover.Editor.Indexed.Unit,
    MAlonzo.Code.Prover.Editor.Lift,
    -- MAlonzo.Code.Prover.Editor.List,
    MAlonzo.Code.Prover.Editor.Map,
    MAlonzo.Code.Prover.Editor.Parent,
    MAlonzo.Code.Prover.Editor.Product,
    -- MAlonzo.Code.Prover.Editor.Sigma,
    MAlonzo.Code.Prover.Editor.Unit,
    MAlonzo.Code.Prover.Function,
    -- MAlonzo.Code.Prover.Function.Bool,
    -- MAlonzo.Code.Prover.Function.Bool.List,
    MAlonzo.Code.Prover.Function.Bool.Product,
    -- MAlonzo.Code.Prover.Function.Bool.Sigma.Sum,
    -- MAlonzo.Code.Prover.Function.Indexed,
    -- MAlonzo.Code.Prover.Function.Indexed.List,
    -- MAlonzo.Code.Prover.Function.Indexed.Product,
    -- MAlonzo.Code.Prover.Function.Indexed.Sigma,
    -- MAlonzo.Code.Prover.Function.Indexed.Simple.Bool,
    -- MAlonzo.Code.Prover.Function.Indexed.Simple.Bool.List,
    -- MAlonzo.Code.Prover.Function.Indexed.Simple.Bool.Product,
    -- MAlonzo.Code.Prover.Function.Indexed.Simple.Bool.Sigma.Sum,
    -- MAlonzo.Code.Prover.Function.Indexed.Simple.Partial,
    -- MAlonzo.Code.Prover.Function.Indexed.Simple.Partial.List,
    -- MAlonzo.Code.Prover.Function.Indexed.Simple.Partial.Product,
    -- MAlonzo.Code.Prover.Function.Indexed.Simple.Partial.Sigma.Sum,
    -- MAlonzo.Code.Prover.Function.Indexed.Simple.Split,
    -- MAlonzo.Code.Prover.Function.Indexed.Simple.Split.List,
    -- MAlonzo.Code.Prover.Function.Indexed.Simple.Split.Product,
    -- MAlonzo.Code.Prover.Function.Indexed.Simple.Split.Sigma.Sum,
    -- MAlonzo.Code.Prover.Function.Indexed.Split,
    -- MAlonzo.Code.Prover.Function.Indexed.Split.List,
    -- MAlonzo.Code.Prover.Function.Indexed.Split.Product,
    -- MAlonzo.Code.Prover.Function.Indexed.Split.Sigma.Maybe,
    -- MAlonzo.Code.Prover.Function.Indexed.Split.Sigma.Sum,
    -- MAlonzo.Code.Prover.Function.Partial,
    -- MAlonzo.Code.Prover.Function.Partial.Compose,
    -- MAlonzo.Code.Prover.Function.Partial.List,
    -- MAlonzo.Code.Prover.Function.Partial.Product,
    -- MAlonzo.Code.Prover.Function.Partial.Sigma,
    -- MAlonzo.Code.Prover.Function.Partial.Sigma.Sum,
    -- MAlonzo.Code.Prover.Function.Partial.Sum,
    -- MAlonzo.Code.Prover.Function.Product,
    -- MAlonzo.Code.Prover.Function.Sigma,
    MAlonzo.Code.Prover.Function.Split,
    MAlonzo.Code.Prover.Function.Split.Compose,
    -- MAlonzo.Code.Prover.Function.Split.List,
    MAlonzo.Code.Prover.Function.Split.Product,
    -- MAlonzo.Code.Prover.Function.Split.Sigma,
    -- MAlonzo.Code.Prover.Function.Split.Sigma.Sum,
    -- MAlonzo.Code.Prover.Function.Split.Sum,
    -- MAlonzo.Code.Prover.Function.Sum,
    MAlonzo.Code.Prover.Prelude,
    MAlonzo.Code.Prover.Prelude.Any,
    MAlonzo.Code.Prover.Prelude.Bool,
    MAlonzo.Code.Prover.Prelude.Char,
    MAlonzo.Code.Prover.Prelude.CharWith,
    MAlonzo.Code.Prover.Prelude.Collection,
    MAlonzo.Code.Prover.Prelude.Digit,
    MAlonzo.Code.Prover.Prelude.Direction,
    MAlonzo.Code.Prover.Prelude.Empty,
    MAlonzo.Code.Prover.Prelude.Equal,
    MAlonzo.Code.Prover.Prelude.Fin,
    MAlonzo.Code.Prover.Prelude.FinSet,
    MAlonzo.Code.Prover.Prelude.Function,
    MAlonzo.Code.Prover.Prelude.If,
    MAlonzo.Code.Prover.Prelude.Inspect,
    MAlonzo.Code.Prover.Prelude.IO,
    MAlonzo.Code.Prover.Prelude.Level,
    MAlonzo.Code.Prover.Prelude.List,
    MAlonzo.Code.Prover.Prelude.List1,
    MAlonzo.Code.Prover.Prelude.Map,
    MAlonzo.Code.Prover.Prelude.Maybe,
    MAlonzo.Code.Prover.Prelude.Nat,
    MAlonzo.Code.Prover.Prelude.Pair,
    MAlonzo.Code.Prover.Prelude.Relation,
    MAlonzo.Code.Prover.Prelude.Retraction,
    MAlonzo.Code.Prover.Prelude.Setoid,
    MAlonzo.Code.Prover.Prelude.Sigma,
    MAlonzo.Code.Prover.Prelude.String,
    MAlonzo.Code.Prover.Prelude.Sum,
    MAlonzo.Code.Prover.Prelude.Unit,
    MAlonzo.Code.Prover.Prelude.Vec,
    MAlonzo.Code.Prover.View.Command,
    MAlonzo.Code.Prover.View.Interface,
    MAlonzo.Code.Prover.View.Line,
    MAlonzo.Code.Prover.View.Style,
    MAlonzo.Code.Prover.View.Text,
    MAlonzo.Code.Prover.View.Tree,
    MAlonzo.Code.Prover.View.Window,
    MAlonzo.RTE
  build-depends:
    base >= 4.13.0 && < 4.14,
    aeson >= 1.4.7 && < 1.5,
    brick >= 0.52.1 && < 0.53,
    bytestring >= 0.10.10 && < 0.11,
    directory >= 1.3.6 && < 1.4,
    ieee754 >= 0.8.0 && < 0.9,
    scientific >= 0.3.6 && < 0.4,
    text >= 1.2.4 && < 1.3,
    vector >= 0.12.1 && < 0.13,
    vty >= 5.28.2 && < 5.29
  default-language:
    Haskell2010
  ghc-options:
    -threaded
    -Wno-overlapping-patterns

