cabal-version: 3.0

name:
  prover
version:
  0.1.0
build-type:
  Simple
license:
  MIT
license-file:
  LICENSE
maintainer:
  Matt Superdock <msuperdock@gmail.com>
synopsis:
  A simple interactive theorem prover.
description:
  An interactive theorem prover, with proofs represented using dependent types.
category:
  Mathematics

executable prover
  hs-source-dirs:
    src
  main-is:
    Main.hs
  build-depends:
    base >= 4.13.0 && < 4.15,
    aeson >= 1.5 && < 1.6,
    brick >= 0.53 && < 0.61,
    bytestring >= 0.10.10 && < 0.11,
    directory >= 1.3.6 && < 1.4,
    ieee754 >= 0.8.0 && < 0.9,
    scientific >= 0.3.6 && < 0.4,
    text >= 1.2.4 && < 1.3,
    vector >= 0.12.1 && < 0.13,
    vty >= 5.29 && < 5.34
  default-language:
    Haskell2010
  ghc-options:
    -threaded
    -Wno-missing-home-modules
    -Wno-overlapping-patterns

